# Multi-threaded-chat-server-in-Rust-with-Tokio

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO  docker-compose.yaml
database/: init.sql
public/: hello.html  index.html  style.css
src/: lib.rs  main.rs  server.rs  website_handler.rs
src/http/: method.rs  mod.rs  query_string.rs  request.rs  response.rs  status_code.rs
